--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,18 +13,19 @@ a {
   display: block;
 }
 #header-container {
-  padding: 32px 60px;
+  padding: 16px 60px;
   display: block;
 }
-#bar-left-menu {
-  position: relative;
+#header-container #bar-left-menu {
+  position: absolute;
   display: block;
   width: 26px;
   height: 20px;
+  margin-top: 14px;
   cursor: pointer;
   overflow: hidden;
 }
-#bars {
+#header-container #bar-left-menu #bars {
   background: #6a1be2;
   position: relative;
   width: 100%;
@@ -32,8 +33,8 @@ a {
   display: block;
   margin-top: 9px;
 }
-#bars::before,
-#bars::after {
+#header-container #bar-left-menu #bars::before,
+#header-container #bar-left-menu #bars::after {
   background: #6a1be2;
   width: 100%;
   height: 0.2em;
@@ -41,9 +42,13 @@ a {
   left: 0;
   content: '';
 }
-#bars::before {
+#header-container #bar-left-menu #bars::before {
   top: -7px;
 }
-#bars::after {
+#header-container #bar-left-menu #bars::after {
   top: 7px;
+}
+#header-container #title {
+  text-align: center;
+  font-size: 40px;
 }
