--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ html
       div#header-container
         a#bar-left-menu
           span#bars
-        //div#title
-        //a.bar-right-menu
+        div#title Pine
+        a#bar-right-menu
 
     div#load-container
