--- a/views/index.jade
+++ b/views/index.jade
@@ -11,5 +11,6 @@ html
           span#bars
         div#title Pine
         a#bar-right-menu
+          img(src='../public/images/icon_settings.png')
 
     div#load-container
