--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -26,7 +26,7 @@ a
     overflow hidden
 
     #bars
-      background #6a1be2
+      background black
       position relative
       width 100%
       height 0.2em
@@ -34,7 +34,7 @@ a
       margin-top 9px
 
     #bars::before, #bars::after
-      background #6a1be2
+      background black
       width 100%
       height 0.2em
       position absolute
@@ -51,3 +51,7 @@ a
     text-align center
     font-size 40px
 
+  #bar-right-menu
+    float right
+    margin-top -40px
+    cursor pointer
