--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='../public/stylesheets/reset.css')
     link(rel='stylesheet', href='../public/stylesheets/style.css')
   body
-    header#menu
+    header#header-menu
       div#header-container
         a#bar-left-menu
           span#bars
@@ -13,4 +13,12 @@ html
         a#bar-right-menu
           img(src='../public/images/icon_settings.png')
 
-    div#load-container
+    div#container
+      div#content
+        div.thread
+          span 11234123412341234134asdfasdfasdfasdfad
+        div.thread
+        div.thread
+        div.thread
+        div.thread
+        div.thread
