--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
 a {
   color: #00b7ff;
 }
-#menu {
+#header-menu {
   position: fixed;
   width: 100%;
   top: 0;
@@ -12,11 +12,11 @@ a {
   right: 0;
   display: block;
 }
-#header-container {
+#header-menu #header-container {
   padding: 16px 60px;
   display: block;
 }
-#header-container #bar-left-menu {
+#header-menu #header-container #bar-left-menu {
   position: absolute;
   display: block;
   width: 26px;
@@ -25,7 +25,7 @@ a {
   cursor: pointer;
   overflow: hidden;
 }
-#header-container #bar-left-menu #bars {
+#header-menu #header-container #bar-left-menu #bars {
   background: #000;
   position: relative;
   width: 100%;
@@ -33,8 +33,8 @@ a {
   display: block;
   margin-top: 9px;
 }
-#header-container #bar-left-menu #bars::before,
-#header-container #bar-left-menu #bars::after {
+#header-menu #header-container #bar-left-menu #bars::before,
+#header-menu #header-container #bar-left-menu #bars::after {
   background: #000;
   width: 100%;
   height: 0.2em;
@@ -42,18 +42,45 @@ a {
   left: 0;
   content: '';
 }
-#header-container #bar-left-menu #bars::before {
+#header-menu #header-container #bar-left-menu #bars::before {
   top: -7px;
 }
-#header-container #bar-left-menu #bars::after {
+#header-menu #header-container #bar-left-menu #bars::after {
   top: 7px;
 }
-#header-container #title {
+#header-menu #header-container #title {
   text-align: center;
   font-size: 40px;
 }
-#header-container #bar-right-menu {
+#header-menu #header-container #bar-right-menu {
   float: right;
   margin-top: -40px;
   cursor: pointer;
+}
+#container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 80px;
+  width: 1145px;
+}
+#container #content {
+  float: left;
+  display: block;
+  font-size: 0;
+}
+#container #content div {
+  font-size: 21px;
+}
+.thread {
+  background: #cd5c5c;
+  width: 229px;
+  height: 229px;
+  display: inline-block;
+}
+.thread span {
+  position: absolute;
+  bottom: 30px;
+  word-break: break-all;
+  display: inline;
+  width: 229px;
 }
