--- a/views/index.jade
+++ b/views/index.jade
@@ -20,5 +20,9 @@ html
             img
             span
 
+    #config-container
+      #config-menus
+        a#button-latest-1-week Latest 1 week
+
   script(src='javascripts/jquery-1.11.1.js')
   script(src='javascripts/script.js')
