--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,6 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-a {
-  color: #00b7ff;
-}
 #header-menu {
   background: #fff;
   opacity: 0.8;
@@ -70,6 +67,34 @@ a {
   float: left;
   display: block;
   font-size: 0;
+}
+#config-container {
+  position: fixed;
+  top: 80px;
+  right: 60px;
+  width: 120px;
+  height: 200px;
+  visibility: hidden;
+  overflow: hidden;
+}
+#config-container #config-menus {
+  position: absolute;
+  top: -120px;
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+#config-container #config-menus a {
+  display: block;
+  background: #cd5c5c;
+  opacity: 0.4;
+  cursor: pointer;
+  float: left;
+  width: 100px;
+  padding: 10px;
+}
+#config-container #config-menus.config-menus-active {
+  top: 0;
+  visibility: visible;
 }
 .thread {
   position: relative;
