--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  overflow-y: scroll;
 }
 #header-menu {
   background: #fff;
@@ -57,13 +58,13 @@ body {
   margin-top: -40px;
   cursor: pointer;
 }
-#container {
+#body-container {
   margin-left: auto;
   margin-right: auto;
   padding-top: 80px;
   width: 1145px;
 }
-#container #content {
+#body-container #thread-container {
   float: left;
   display: block;
   font-size: 0;
@@ -107,7 +108,6 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  opacity: 0;
   transition: opacity 0.2s ease-in;
 }
 .thread span {
