--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,6 @@
 body
   font 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  overflow-y scroll
 
 #header-menu
   background white
@@ -56,13 +57,13 @@ body
       margin-top -40px
       cursor pointer
 
-#container
+#body-container
   margin-left auto
   margin-right auto
   padding-top 80px
   width 1145px
 
-  #content
+  #thread-container
     float left
     display block
     font-size 0
@@ -106,7 +107,6 @@ body
     position absolute
     width 100%
     height 100%
-    opacity 0
     transition opacity .2s ease-in
 
   span
