--- a/views/index.jade
+++ b/views/index.jade
@@ -13,16 +13,13 @@ html
         a#bar-right-menu
           img(src='images/icon_settings.png')
 
-    #container
-      #content
-        - for (var i=0; i<maxId; i++)
-          .thread(id='thread_'+(maxId-i))
-            img
-            span
+    #body-container
+      #thread-container
 
-    #config-container
-      #config-menus
-        a#button-latest-1-week Latest 1 week
+    //#config-container
+    //  #config-menus
+    //    a#button-latest-1-week Latest 1 week
 
-  script(src='javascripts/jquery-1.11.1.js')
+  script(src='javascripts/jquery-2.1.1.js')
+  script(src='javascripts/jquery.unveil.js')
   script(src='javascripts/script.js')
