--- a/views/index.jade
+++ b/views/index.jade
@@ -5,20 +5,21 @@ html
     link(rel='stylesheet', href='stylesheets/reset.css')
     link(rel='stylesheet', href='stylesheets/style.css')
   body
-    header#header-menu
-      #header-container
-        a#bar-left-menu
-          span#bars
-        #title Pine
-        a#bar-right-menu
-          img(src='images/icon_settings.png')
+    #page-wrap
+      header#header-menu
+        #header-container
+          a#bar-left-menu
+            span#bars
+          #title Pine
+          a#bar-right-menu
+            img(src='images/icon_settings.png')
 
-    #body-container
-      #thread-container
+      #body-container
+        #thread-container
 
-    //#config-container
-    //  #config-menus
-    //    a#button-latest-1-week Latest 1 week
+      //#config-container
+      //  #config-menus
+      //    a#button-latest-1-week Latest 1 week
 
   script(src='javascripts/jquery-2.1.1.js')
   script(src='javascripts/jquery.unveil.js')
